# wgpu_exercise

./: Cargo.toml  index.html  run.nu
.helix/: languages.toml
examples/tutorial_1_window/: main.rs
examples/tutorial_2_surface/: challenge.rs  main.rs  standard.rs
examples/tutorial_3_pipeline/: challenge.rs  challenge.wgsl  main.rs  shader.wgsl  standard.rs
examples/tutorial_4_buffer/: main.rs  standard.rs
scripts/: example.nu  run.nu  serve.nu  simple_serve.nu  wasm.nu
src/: app_surface.rs  framework.rs  lib.rs  main.rs  shader.wgsl
src/lib/: app_surface.rs
