[package]
name = "wgpu_exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
challenge = []
webgl = []

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.16"

# 异步运行时
pollster = "0.2"

bytemuck = { version = "1.13", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"